# agentframe

./: .env.example  .env.fastapi.example  CHANGELOG.md
agentframe/: .gitignore  CHANGELOG.md  Dockerfile  LICENSE  MANIFEST.in  README.md  docker-compose.yml  pyproject.toml  setup.py
docs/: documentation.md  getting_started.md  implement_info_agent.md  implement_info_agent_fastapi.md  openai_compatible_apis.md  prompt_customization.md  publishing.md
examples/: __init__.py  basic_agent.py  custom_prompts.py
examples/prompt_templates/: code_reviewer.py  research_assistant.py
scripts/: validate_package.py
src/agentframe/: __init__.py
src/agentframe/core/: __init__.py  agent.py  executor.py  planner.py  prompts.py  state.py
src/agentframe/memory/: __init__.py  chat_history.py
src/agentframe/models/: __init__.py  base.py  claude_model.py  gemini_model.py  openai_model.py
src/agentframe/tools/: __init__.py  base.py  decorators.py
src/agentframe/utils/: __init__.py  intent_parser.py  validators.py
tests/: conftest.py
